db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.network/webui-db-my-network: "true"
    io.kompose.service: db
  name: db
spec:
  containers:
    - env:
        - name: $MYSQL_DATABASE
          value: project
        - name: $MYSQL_ROOT_PASSWORD
          value: test1234
      image: 127.0.0.1:30000/db-project
      name: db
      ports:
        - containerPort: 3306
      resources: {}
  hostname: db
  restartPolicy: OnFailure
status: {}
