webui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.network/webui-db-my-network: "true"
    io.kompose.service: webui
  name: webui
spec:
  containers:
    - args:
        - sh
        - -c
        - sleep 10 && npx prisma db push && npx prisma db seed && yarn run dev
      image: webui-project
      name: webui
      ports:
        - containerPort: 3000
      stdin: true
      tty: true
  hostname: webui
  restartPolicy: OnFailure
status: {}
