db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: project
            - name: MYSQL_ROOT_PASSWORD
              value: test1234
          image: mysql:latest
          name: db
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
      protocol: TCP
