mysql-service.yaml
apiVersion: v1 
kind: Service 
metadata:  
  name: redis 
spec:  
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:    
      app: redis
