project-deployment.yaml
apiVersion: v1 
kind: Service 
metadata:  
  name: db-service
spec:  
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:    
      app: db
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: webserver-service
#   labels:
#     app: webserver
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     targetPort: 80
#     nodePort: 30090
#   selector:
#     app: webserver
---
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  labels:
    app: webui
spec:
  type: NodePort
  ports:
    - name: webui
      port: 3001
      targetPort: 3001
      nodePort: 30090
  selector:
    app: webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: db
  strategy:
    type: Recreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector:
    matchLabels:
      app: webui
  replicas: 1
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
      - name: webui
        image: ajmosley345/468-project:webui
        command: ["/bin/sh"]
        args: ["/scripts/startup.sh"]
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: startup
          mountPath: /scripts/
      volumes:
      - name: startup
        configMap:
          name: startup
          defaultMode: 0744
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: webserver
# spec:
#   selector:
#     matchLabels:
#       app: webserver
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: webserver
#     spec:
#       containers:
#       - name: webserver
#         image: ajmosley345/468-project:webserver
#         ports:
#         - containerPort: 80
