project-service.yaml
apiVersion: v1 
kind: Service 
metadata:  
  name: mysql 
spec:  
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: mysql
  selector:    
      app: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
  selector:
    app: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  labels:
    app: webui
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: webui
