webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: webui
  name: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/main-default: "true"
        io.kompose.service: webui
    spec:
      containers:
        - args:
            - sh
            - -c
            - cd /app  && sleep 10 && yarn install && npx prisma generate && npx prisma migrate deploy && npx prisma db seed && yarn build && yarn run dev
          image: ajmosley345/468-project:webui
          name: webui
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: webui-service
spec:
  selector:
    app: webui-service
  type: NodePort
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
    nodePort: 30090
